# wdrd

./: .env.example  .gitignore  README.md  pyproject.toml  test.ipynb  test.py
wdrd/: config.py  document.py  load.py  sparql.py  wd_item.py
