[project]
name = "wdrd"
version = "0.1.0"
description = "Import data from Riksdagen to Wikidata"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "setuptools",
    "wikidataintegrator",
    "pandas",
    "pyshex",
    "requests",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "python-dotenv"
]
